# Libraries for semantic analysis of SCI scripts.

package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "common",
    hdrs = ["common.hpp"],
    deps = [
        "//scic/parsers/sci:ast",
        "//util/strings:ref_str",
        "//util/types:choice",
        "//util/types:strong_types",
        "//util/types:tmpl",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "late_bound",
    hdrs = ["late_bound.hpp"],
)

cc_library(
    name = "symbol",
    srcs = ["symbol.cpp"],
    hdrs = ["symbol.hpp"],
    deps = [
        "//util/strings:ref_str",
        "//util/types:choice",
        "//util/types:strong_types",
    ],
)

cc_library(
    name = "selector_table",
    srcs = ["selector_table.cpp"],
    hdrs = ["selector_table.hpp"],
    deps = [
        ":common",
        ":late_bound",
        "//scic/parsers/sci:ast",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "class_table",
    srcs = ["class_table.cpp"],
    hdrs = ["class_table.hpp"],
    deps = [
        ":common",
        ":late_bound",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//scic/parsers/sci:ast",
        "//util/status:status_macros",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "object_table",
    srcs = ["object_table.cpp"],
    hdrs = ["object_table.hpp"],
    deps = [
        ":class_table",
        ":common",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "proc_table",
    srcs = ["proc_table.cpp"],
    hdrs = ["proc_table.hpp"],
    deps = [
        ":common",
        "//scic/codegen:code_generator",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "input",
    hdrs = ["input.hpp"],
    deps = ["//scic/parsers/sci:ast"],
)

cc_library(
    name = "module_env",
    hdrs = ["module_env.hpp"],
    deps = [
        ":class_table",
        ":common",
        ":input",
        ":object_table",
        ":proc_table",
        ":selector_table",
        "//scic/codegen:code_generator",
        "@abseil-cpp//absl/status:statusor",
    ],
)
