# Libraries for semantic analysis of SCI scripts.

package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "common",
    hdrs = ["common.hpp"],
    deps = [
        "//scic/parsers/sci:ast",
        "//util/strings:ref_str",
        "//util/types:choice",
        "//util/types:strong_types",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "test_helpers",
    testonly = True,
    hdrs = ["test_helpers.hpp"],
    deps = [
        ":common",
        "//scic/text:text_range",
        "//util/strings:ref_str",
    ],
)

cc_library(
    name = "late_bound",
    hdrs = ["late_bound.hpp"],
)

cc_library(
    name = "obj_members",
    hdrs = ["obj_members.hpp"],
    deps = [
        ":common",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//util/strings:ref_str",
    ],
)

cc_library(
    name = "property_list",
    srcs = ["property_list.cpp"],
    hdrs = ["property_list.hpp"],
    deps = [
        ":common",
        ":obj_members",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//util/strings:ref_str",
        "//util/types:sequence",
    ],
)

cc_library(
    name = "selector_table",
    srcs = ["selector_table.cpp"],
    hdrs = ["selector_table.hpp"],
    deps = [
        ":common",
        ":late_bound",
        "//scic/parsers/sci:ast",
        "//scic/text:text_range",
        "//util/strings:ref_str",
        "//util/types:sequence",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "selector_table_test",
    srcs = ["selector_table_test.cpp"],
    deps = [
        ":common",
        ":selector_table",
        ":test_helpers",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "class_table",
    srcs = ["class_table.cpp"],
    hdrs = ["class_table.hpp"],
    deps = [
        ":common",
        ":late_bound",
        ":obj_members",
        ":property_list",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//scic/parsers/sci:ast",
        "//util/status:status_macros",
        "//util/strings:ref_str",
        "//util/types:sequence",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "class_table_test",
    srcs = ["class_table_test.cpp"],
    deps = [
        ":class_table",
        ":selector_table",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "var_table",
    srcs = ["var_table.cpp"],
    hdrs = ["var_table.hpp"],
    deps = [
        ":common",
        "//util/strings:ref_str",
        "//util/types:sequence",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "object_table",
    srcs = ["object_table.cpp"],
    hdrs = ["object_table.hpp"],
    deps = [
        ":class_table",
        ":common",
        ":obj_members",
        ":property_list",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//util/strings:ref_str",
        "//util/types:sequence",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "proc_table",
    srcs = ["proc_table.cpp"],
    hdrs = ["proc_table.hpp"],
    deps = [
        ":common",
        "//scic/codegen:code_generator",
        "//util/strings:ref_str",
        "//util/types:sequence",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "public_table",
    srcs = ["public_table.cpp"],
    hdrs = ["public_table.hpp"],
    deps = [
        ":object_table",
        ":proc_table",
        "//util/types:choice",
        "//util/types:sequence",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "extern_table",
    srcs = ["extern_table.cpp"],
    hdrs = ["extern_table.hpp"],
    deps = [
        ":common",
        "//util/strings:ref_str",
        "//util/types:sequence",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "input",
    hdrs = ["input.hpp"],
    deps = ["//scic/parsers/sci:ast"],
)

cc_library(
    name = "module_env",
    hdrs = ["module_env.hpp"],
    deps = [
        ":class_table",
        ":common",
        ":extern_table",
        ":input",
        ":object_table",
        ":proc_table",
        ":public_table",
        ":selector_table",
        "//scic/codegen:code_generator",
        "//util/types:choice",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "code_builder",
    srcs = ["code_builder.cpp"],
    hdrs = ["code_builder.hpp"],
    deps = [
        ":class_table",
        ":common",
        ":module_env",
        ":object_table",
        ":selector_table",
        "//scic/parsers/sci:ast",
        "//util/status:status_macros",
        "@abseil-cpp//absl/status",
    ],
)
