package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "token",
    srcs = ["token.cpp"],
    hdrs = ["token.hpp"],
    deps = [
        ":text_contents",
    ],
)

cc_library(
    name = "token_test_utils",
    testonly = True,
    hdrs = ["token_test_utils.hpp"],
    deps = [
        ":token",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "token_readers",
    srcs = ["token_readers.cpp"],
    hdrs = ["token_readers.hpp"],
    visibility = ["//visibility:private"],
    deps = [
        ":char_stream",
        ":token",
        "//scic:chartype",
        "//util/status:status_macros",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "token_readers_test",
    srcs = ["token_readers_test.cpp"],
    deps = [
        ":token_readers",
        ":token_test_utils",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "text_contents",
    srcs = ["text_contents.cpp"],
    hdrs = ["text_contents.hpp"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "char_stream",
    srcs = ["char_stream.cpp"],
    hdrs = ["char_stream.hpp"],
    deps = [
        ":text_contents",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "char_stream_test",
    srcs = ["char_stream_test.cpp"],
    deps = [
        ":char_stream",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
