package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "token",
    srcs = ["token.cpp"],
    hdrs = ["token.hpp"],
    deps = [
        "//scic/text:text_range",
        "//util:choice",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "token_test_utils",
    testonly = True,
    hdrs = ["token_test_utils.hpp"],
    deps = [
        ":token",
        "//scic/text:text_range",
        "//util:choice_matchers",
        "//util/strings:ref_str",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "token_readers",
    srcs = ["token_readers.cpp"],
    hdrs = ["token_readers.hpp"],
    deps = [
        ":char_stream",
        ":token",
        "//scic:chartype",
        "//scic/text:text_range",
        "//util/status:status_macros",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "token_readers_test",
    srcs = ["token_readers_test.cpp"],
    deps = [
        ":char_stream",
        ":token",
        ":token_readers",
        ":token_test_utils",
        "//util:choice_matchers",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "char_stream",
    srcs = ["char_stream.cpp"],
    hdrs = ["char_stream.hpp"],
    deps = [
        "//scic/text:text_range",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "char_stream_test",
    srcs = ["char_stream_test.cpp"],
    deps = [
        ":char_stream",
        "//scic/text:text_range",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "token_stream",
    srcs = ["token_stream.cpp"],
    hdrs = ["token_stream.hpp"],
    deps = [":token"],
)
