load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//rules:sci.bzl", "sci_binary", "sci_build_env", "sci_headers", "sci_script")

sci_build_env(
    name = "base_env",
    classdef = "classdef",
    game_header = "game.sh",
    selector = "selector",
)

sci_headers(
    name = "base_headers",
    hdrs = [
        "game.sh",
        "test.sh",
    ],
)

sci_script(
    name = "main",
    src = "main.sc",
    script_num = 0,
    deps = [":base_headers"],
)

sci_script(
    name = "helper",
    src = "helper.sc",
    script_num = 1,
)

sci_binary(
    name = "resources",
    srcs = [
        ":helper",
        ":main",
    ],
    build_env = ":base_env",
)

build_test(
    name = "resources_build_test",
    targets = [
        ":resources",
    ],
)
