package(
    default_visibility = ["//scic:__subpackages__"],
)

cc_test(
    name = "buffer_test",
    srcs = ["buffer_test.cpp"],
    deps = [
        ":buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "buffer",
    srcs = ["buffer.cpp"],
    hdrs = ["buffer.hpp"],
    deps = ["@abseil-cpp//absl/strings:str_format"],
)

cc_library(
    name = "printer",
    srcs = ["printer.hpp"],
    deps = [
        "//util/types:name",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
