package(
    default_visibility = ["//:internal"],
)

cc_library(
    name = "status_macros",
    hdrs = ["status_macros.hpp"],
)

cc_library(
    name = "status_matchers",
    testonly = True,
    hdrs = ["status_matchers.hpp"],
    deps = [
        "@abseil-cpp//absl/status",
        "@googletest//:gtest",
    ],
)
