package(
    default_visibility = ["//:internal"],
)

cc_library(
    name = "status_macros",
    hdrs = ["status_macros.hpp"],
)

cc_library(
    name = "status_matchers",
    testonly = True,
    hdrs = ["status_matchers.hpp"],
    deps = [
        ":status_macros",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "result",
    hdrs = ["result.hpp"],
    deps = [
        "//util/types:tmpl",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "result_test",
    srcs = ["result_test.cpp"],
    deps = [
        ":result",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
