package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "status",
    hdrs = ["status.hpp"],
    deps = [
        "//scic/diagnostics",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "results",
    hdrs = ["results.hpp"],
    deps = [
        ":status",
        "//scic/diagnostics",
        "//util/types:tmpl",
    ],
)

cc_library(
    name = "parse_func",
    hdrs = ["parse_func.hpp"],
    deps = [
        ":results",
        "//scic/diagnostics",
    ],
)

cc_library(
    name = "combinators",
    hdrs = [
        "combinators.hpp",
    ],
    deps = [
        ":parse_func",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "combinators_test",
    srcs = ["combinators_test.cpp"],
    deps = [
        ":combinators",
        "//scic/diagnostics",
        "//util/status:status_matchers",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
