load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "status",
    hdrs = ["status.hpp"],
    deps = [
        "//scic/diagnostics",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "results",
    hdrs = ["results.hpp"],
    deps = [
        ":status",
        "//scic/diagnostics",
        "//util/status:result",
    ],
)

cc_library(
    name = "parse_func",
    hdrs = ["parse_func.hpp"],
    deps = [
        ":results",
        "//scic/diagnostics",
    ],
)

cc_library(
    name = "combinators",
    hdrs = [
        "combinators.hpp",
    ],
    deps = ["@abseil-cpp//absl/types:span"],
)

cc_test(
    name = "combinators_test",
    srcs = ["combinators_test.cpp"],
    deps = [
        ":combinators",
        ":results",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest_main",
    ],
)
