# This is a parser for a list of trees, like an S-expression. This takes the
# raw S-expression like language of SCI script, and creates a basic parse tree for it.
package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "ast",
    srcs = ["ast.cpp"],
    hdrs = ["ast.hpp"],
    deps = [
        "//scic/tokens:token",
        "//util:choice",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "parser",
    srcs = ["parser.cpp"],
    hdrs = ["parser.hpp"],
    deps = [
        ":ast",
        "//scic/tokens:token",
        "//scic/tokens:token_stream",
        "//util/status:status_macros",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_binary(
    name = "parser_test_tool",
    srcs = ["parser_test_tool.cpp"],
    deps = [
        ":parser",
        "//scic/tokens:token",
        "//scic/tokens:token_readers",
        "@argparse",
    ],
)
