package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "ast",
    srcs = ["ast.cpp"],
    hdrs = ["ast.hpp"],
    deps = [
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//util:choice",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "ast_test",
    srcs = ["ast_test.cpp"],
    deps = [
        ":ast",
        "//scic/text:text_range",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "parser",
    srcs = ["parser.cpp"],
    hdrs = ["parser.hpp"],
    deps = [
        ":ast",
        "//scic/diagnostics",
        "//scic/parsers/combinators",
        "//scic/parsers/list_tree:ast",
    ],
)
