package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "ast",
    srcs = ["ast.cpp"],
    hdrs = ["ast.hpp"],
    deps = [
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//util:choice",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "parser_common",
    srcs = ["parser_common.cpp"],
    hdrs = ["parser_common.hpp"],
    deps = [
        ":ast",
        "//scic/diagnostics",
        "//scic/parsers/combinators:parse_func",
        "//scic/parsers/combinators:results",
        "//scic/parsers/combinators:status",
        "//scic/parsers/list_tree:ast",
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//util/status:status_macros",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "ast_test",
    srcs = ["ast_test.cpp"],
    deps = [
        ":ast",
        "//scic/text:text_range",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "const_value_parsers",
    srcs = [
        "const_value_parsers.cpp",
    ],
    hdrs = [
        "const_value_parsers.hpp",
    ],
    deps = [
        ":ast",
        ":parser_common",
        "//scic/parsers/list_tree:parser",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "item_parsers",
    srcs = [
        "item_parsers.cpp",
    ],
    hdrs = [
        "item_parsers.hpp",
    ],
    deps = [
        ":ast",
        ":const_value_parsers",
        ":expr_parsers",
        ":parser_common",
        "//scic/parsers/combinators:parse_func",
        "//scic/parsers/list_tree:parser",
        "//scic/tokens:token_readers",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "item_parsers_test",
    srcs = ["item_parsers_test.cpp"],
    deps = [
        ":item_parsers",
        ":parser_common",
        "//scic/diagnostics",
        "//scic/parsers/list_tree:parser_test_utils",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "expr_parsers",
    srcs = [
        "expr_parsers.cpp",
    ],
    hdrs = [
        "expr_parsers.hpp",
    ],
    deps = [
        ":ast",
        ":const_value_parsers",
        ":parser_common",
        "//scic/parsers/combinators:parse_func",
        "//scic/parsers/list_tree:parser",
        "//scic/tokens:token_readers",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "parser",
    srcs = [
        "parser.cpp",
    ],
    hdrs = ["parser.hpp"],
    deps = [
        ":ast",
        ":item_parsers",
        ":parser_common",
        "//scic/diagnostics",
        "//scic/parsers/combinators",
        "//scic/parsers/list_tree:ast",
    ],
)

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = [
        ":ast",
        ":parser",
        "//scic/diagnostics",
        "//scic/parsers/combinators",
        "//scic/parsers/list_tree:ast",
        "//scic/parsers/list_tree:parser_test_utils",
        "//util:choice_matchers",
        "//util/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
