package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "ast",
    srcs = ["ast.cpp"],
    hdrs = ["ast.hpp"],
    deps = [
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//util/io:printer",
        "//util/strings:ref_str",
        "//util/types:choice",
        "//util/types:sequence",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "parser_common",
    srcs = ["parser_common.cpp"],
    hdrs = ["parser_common.hpp"],
    deps = [
        ":ast",
        "//scic/diagnostics",
        "//scic/parsers/combinators:parse_func",
        "//scic/parsers/combinators:results",
        "//scic/parsers/combinators:status",
        "//scic/parsers/list_tree:ast",
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//util/status:status_macros",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "ast_test",
    srcs = ["ast_test.cpp"],
    deps = [
        ":ast",
        "//scic/text:text_range",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "const_value_parsers",
    srcs = [
        "const_value_parsers.cpp",
    ],
    hdrs = [
        "const_value_parsers.hpp",
    ],
    deps = [
        ":ast",
        ":parser_common",
        "//scic/parsers/combinators:results",
        "//scic/parsers/list_tree:ast",
        "//util/strings:ref_str",
    ],
)

cc_library(
    name = "item_parsers",
    srcs = [
        "item_parsers.cpp",
    ],
    hdrs = [
        "item_parsers.hpp",
    ],
    deps = [
        ":ast",
        ":const_value_parsers",
        ":expr_parsers",
        ":parser_common",
        "//scic/parsers/combinators:parse_func",
        "//scic/parsers/combinators:results",
        "//scic/parsers/combinators:status",
        "//scic/parsers/list_tree:ast",
        "//util/status:status_macros",
        "//util/types:choice",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "item_parsers_test",
    srcs = ["item_parsers_test.cpp"],
    deps = [
        ":ast",
        ":item_parsers",
        "//scic/parsers/list_tree:parser_test_utils",
        "//scic/text:text_range",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "expr_parsers",
    srcs = [
        "expr_parsers.cpp",
    ],
    hdrs = [
        "expr_parsers.hpp",
    ],
    deps = [
        ":ast",
        ":const_value_parsers",
        ":parser_common",
        "//scic/parsers/combinators:parse_func",
        "//scic/parsers/combinators:results",
        "//scic/parsers/list_tree:ast",
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//util/status:status_macros",
        "//util/strings:ref_str",
    ],
)

cc_library(
    name = "parser",
    srcs = [
        "parser.cpp",
    ],
    hdrs = ["parser.hpp"],
    deps = [
        ":ast",
        ":item_parsers",
        ":parser_common",
        "//scic/parsers/combinators:results",
        "//scic/parsers/list_tree:ast",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = [
        ":ast",
        ":parser",
        "//scic/parsers/combinators:results",
        "//scic/parsers/list_tree:parser_test_utils",
        "//util/types:choice_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "parser_test_tool",
    srcs = ["parser_test_tool.cpp"],
    deps = [
        ":parser",
        "//scic/parsers:include_context",
        "//scic/parsers/list_tree:parser",
        "//scic/text:text_range",
        "//scic/tokens:token",
        "//scic/tokens:token_readers",
        "//util/status:status_macros",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
        "@argparse",
    ],
)
