load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "expr_context",
    srcs = ["expr_context.cpp"],
    hdrs = ["expr_context.hpp"],
    deps = [
        "//scic/codegen:code_generator",
        "//scic/parsers/sci:ast",
        "//scic/sem:class_table",
        "//scic/sem:common",
        "//scic/sem:module_env",
        "//scic/sem:object_table",
        "//scic/sem:property_list",
        "//scic/sem:selector_table",
        "//scic/status",
        "//util/strings:ref_str",
        "//util/types:choice",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "expr_builder",
    srcs = ["expr_builder.cpp"],
    hdrs = ["expr_builder.hpp"],
    deps = [
        ":expr_context",
        "//scic/codegen:code_generator",
        "//scic/parsers/sci:ast",
        "//scic/sem:common",
        "//scic/sem:selector_table",
        "//scic/status",
        "//util/status:status_macros",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)
